--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.19"
+    "mongoose": "^5.9.19",
+    "passport": "^0.7.0"
   }
 }
