--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.19",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
 }
